--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -42,3 +42,4 @@ yarn-error.log*
 **/public/sw.js.map
 **/public/workbox-*.js.map
 **/public/worker-*.js.map
+.pnpm-debug.log*
