--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@tailwindcss/forms": "^0.3.2"
   },
   "devDependencies": {
     "eslint": "8.16.0",
